@@ -18,6 +18,7 @@ package net.fabricmc.meta;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -28,18 +29,27 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import com.google.gson.stream.JsonReader;
 import org.jetbrains.annotations.VisibleForTesting;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import net.fabricmc.meta.data.VersionDatabase;
+import net.fabricmc.meta.utils.McObfuscationChecker;
 import net.fabricmc.meta.utils.Reference;
 import net.fabricmc.meta.web.WebServer;
 
 import net.legacyfabric.meta.data.LegacyVersionDatabase;
 
 public class FabricMeta {
+	public static Path CACHE_DIR = Paths.get("cache");
+	public static Path DATA_DIR = Paths.get("data");
+
+	public static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
+	public static final McObfuscationChecker MC_OBFUSCATION_CHECKER = new McObfuscationChecker();
+
 	public static volatile VersionDatabase database;
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(VersionDatabase.class);
@@ -63,7 +73,7 @@ public class FabricMeta {
 				String heartbeatUrlString = config.get("heartbeatUrl");
 
 				if (heartbeatUrlString != null) {
-					heartbeatUrl = new URL(heartbeatUrlString);
+					heartbeatUrl = URI.create(heartbeatUrlString).toURL();
 				}
 			} catch (IOException | IllegalStateException e) {
 				throw new RuntimeException("malformed config in "+configFile, e);
@@ -74,17 +84,18 @@ public class FabricMeta {
 
 		LOGGER.info("Starting with local maven {}", Reference.LOCAL_FABRIC_MAVEN_URL);
 
-		update();
+		update(true);
 
 		ScheduledExecutorService executorService = Executors.newScheduledThreadPool(1);
-		executorService.scheduleWithFixedDelay(FabricMeta::update, 1, 1, TimeUnit.MINUTES);
+		executorService.scheduleWithFixedDelay(() -> update(false), 1, 1, TimeUnit.MINUTES);
 
 		WebServer.start();
 	}
 
-	private static void update() {
+	private static void update(boolean initial) {
 		try {
-			database = VersionDatabase.generate(new LegacyVersionDatabase());
+			database = VersionDatabase.generate(new LegacyVersionDatabase(), initial);
+			FabricMeta.MC_OBFUSCATION_CHECKER.save();
 			updateHeartbeat();
 		} catch (Throwable t) {
 			if (database == null) {
@@ -102,7 +113,7 @@ public class FabricMeta {
 		}
 
 		configInitialized = true;
-		update();
+		update(false);
 	}
 
 	private static void updateHeartbeat() {
