@@ -20,7 +20,6 @@ package net.fabricmc.meta.web;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
@@ -63,7 +62,7 @@ public class ServerBootstrap {
 			}
 
 			final String installerVersion = getAndValidateVersion(ctx, FabricMeta.database.installer, "installer_version");
-			final String gameVersion = getAndValidateVersion(ctx, FabricMeta.database.game, "game_version");
+			final String gameVersion = getAndValidateVersion(ctx, FabricMeta.database.getGameModels(), "game_version");
 			final String loaderVersion = getAndValidateVersion(ctx, FabricMeta.database.getAllLoader(), "loader_version");
 
 			validateLoaderVersion(loaderVersion);
@@ -169,7 +168,7 @@ public class ServerBootstrap {
 		final String url = String.format(getInstallerURL(), installerVersion);
 
 		System.out.println("Downloading: " + url);
-		FileUtils.copyURLToFile(new URL(url), jar.toFile());
+		FileUtils.copyURLToFile(URI.create(url).toURL(), jar.toFile());
 		return jar;
 	}
 
